tests/integration/fail/div_by_zero.ncl
# test = 'error' 
#
# [metadata]
# error = 'EvalError::Other'
1 + 1 / (1 - 1)
